<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:isScrollContainer="true"

    android:orientation="vertical">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:background="@color/cardview_dark_background"

        >

        <!--TextView -->
        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/swipe_to_refresh"
            tools:ignore="MissingClass" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="310dp">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="312dp"
    android:orientation="vertical"
    >
    <com.jmedeisis.draglinearlayout.DragLinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="245dp">

        <!--Parent layout is a Draglinearlayout
            whose orientation is vertical and
            we have to provide id to it.-->

        <!--below is a simple image view -->
        <ImageView
            android:id="@+id/idIVlogo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/image_desc"
            android:src="@mipmap/ic_launcher" />

        <!--below is the simple text view-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:padding="20dp"
            android:text="@string/geeks_for_geeks"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!--below is the simple text view-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:padding="10dp"
            android:text="@string/dsa_course"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


    </com.jmedeisis.draglinearlayout.DragLinearLayout>





        <ImageView
            android:id="@+id/iv_mic"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="199dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/google_icon" />

                <TextView
            android:id="@+id/tv_speech_to_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="44dp"
            android:textSize="30sp"
            android:padding="10dp"
            android:text="@string/tap_mic_to_speak"
            />


</LinearLayout>
</ScrollView>
</LinearLayout>
